@@ -3931,8 +3931,10 @@ namespace BDArmory.Control
             if (cosAngle < 0)
             {
                 if (cosAngle < ImmelmannTurnCosAngle)
-                    targetDirection = Vector3.RotateTowards(-vesselTransform.up, -vesselTransform.forward, Mathf.Deg2Rad * ImmelmannTurnAngle, 0); // If the target is in our blind spot, just pitch up to get a better view. (Immelmann turn.)
-
+                {
+                    var pitchDirection = (avoidingTerrain || postTerrainAvoidanceCoolDownTimer >= 0) && Vector3.Dot(vesselTransform.forward, upDirection) > 0 ? vesselTransform.forward : -vesselTransform.forward; // Don't pitch back into terrain if we've just been avoiding it.
+                    targetDirection = Vector3.RotateTowards(-vesselTransform.up, pitchDirection, Mathf.Deg2Rad * ImmelmannTurnAngle, 0); // If the target is in our blind spot, just pitch up to get a better view. (Immelmann turn.)
+                }
                 targetPosition = vesselTransform.position + Vector3.Cross(Vector3.Cross(forwardDirection, targetDirection), forwardDirection).normalized * 200; // Make the target position 90° from vesselTransform.up.
             }
             else if (steerMode != SteerModes.Aiming)
